[Manual] Simplify generated test descriptions